--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://<thekaleabsamuel>.github.io/<weirdsauce>"
+    "homepage": "https://thekaleabsamuel.github.io/weirdsauce"
+  },
 
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-      "predeploy": "npm run build",
+"scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
   "deploy": "gh-pages -d build"
-  },
+},
+
+
   "eslintConfig": {
     "extends": [
       "react-app",
