--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://thekaleabsamuel.github.io/weirdsauce"
+    "homepage": "https://thekaleabsamuel.github.io/weirdsauce/"
   },
 
 "scripts": {
